--- a/css_6/css_6/css_6/css/style.css
+++ b/css_6/css_6/css_6/css/style.css
@@ -16,95 +16,112 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
-body{
-	padding: 30px;
+.layout {
+	width: 1440px;
+  height: 1700px;
+	background-color: #e8e8e8;
+	margin: 10vh auto 0;
+	overflow: hidden;
 }
 
-.block {
-	margin: 0 0 30px 0;
+.container {
+	margin: 123px 291px;
 }
 
-.block p:nth-child(1){
-	background-color: yellow;
-}
-.block p:nth-child(2){
-	background-color: #eee;
-}
-.block p:nth-child(3){
-	background-color: green;
+ul {
+	margin: 81px 0;
 }
 
-.block p:nth-child(3):hover{
-	background-color: yellow;
+ul > li {
+	padding-left: 30px;
+	margin: 13px;
+	background: url("../img/icons/icon.png") 0 0/23px no-repeat;
+	font-size: 20px;
+	font-family: sans-serif;
 }
 
-
-.block p{
-	font-size: 18px;
-	line-height: 24px;
-	margin: 0px 0px 20px 0px;
-}
-.link {
-	color: red;
-}
-.link:visited{
-	color: green;
-}
-.link:hover{
-	text-decoration: underline;
-	color: blue;
-}
-.link:active{
-	color:yellow;
+ul:first-child > li:nth-child(1) {
+	font-weight: 700;
+	text-decoration: line-through;
 }
 
-.textinput {
-	border: 1px solid #666;
-	height: 50px;
-	padding: 0px 15px;
-	font-size: 18px;
-	width: 300px;
-	margin: 0px 0px 10px 0px;
-}
-
-.textinput:focus{
-	box-shadow: 0 0 10px rgba(0,0,0,0.8);
-}
-
-
-.textbutton {
-	display: block;
-	width: 300px;
-	height: 50px;
-	background-color: #666;
-	font-size: 18px;
-	color: #fff;
-	text-transform: uppercase;
-	margin: 0px 0px 30px 0px;
-}
-
-.textbutton:hover{
-	background-color: #333;
-	color: yellow;
-}
-.textbutton:active{
-	background-color: #eee;
-}
-
-.list {}
-.list li{
-	font-size: 18px;
-	margin: 0px 0px 15px 0px;
-}
-/*
-.list li:first-child{
-	color: green;
-}
-.list li:last-child{
-	color: blue;
+ul:first-child > li:nth-child(2) {
 	font-weight: 700;
 }
-*/
-.list li:nth-child(even){
+
+ul:first-child > li:nth-child(3) {
+	font-style: italic;
+}
+
+ul:first-child > li:nth-child(4) {
 	text-transform: uppercase;
+}
+
+ul:nth-child(2) > li {
+	font-weight: 700;
+}
+
+ul:nth-child(2) > li:hover {
+	color: #d55a5a;
+	background: url("../img/icons/hover.png") 0 0/23px no-repeat;
+}
+
+.buttons {
+	margin: 137px 10px 0125px 30px;
+	height: 44px;
+}
+
+.buttons > a {
+	display: inline-block;
+	height: 100%;
+	width: 199px;
+	border-radius: 25px;
+	text-align: center;
+	padding: 15px;
+	text-transform: uppercase;
+	letter-spacing: 2.8px;
+	font-family: sans-serif;
+	background-color: #81b8b4;
+	color: white;
+	box-shadow: 0px 6px 40px 0 rgba(128, 183, 179, 0.54);
+}
+
+.text {
+	display: inline-block;
+	font-size: 14px;
+}
+
+.arrow {
+	display: inline-block;
+	font-size: 24px;
+	margin-top: -20px;
+	padding-left: 10px;
+}
+
+.buttons > a:nth-child(2) {
+	margin: 0 97px 0;
+}
+
+.buttons > a:hover {
+	background-color: #375755;
+	color: white;
+
+}
+
+.buttons > a:active {
+	background-color: #828282;
+	box-shadow: none;
+}
+
+.inputs > input {
+	height: 50px;
+	width: 292px;
+	margin: 0px 50px 0 20px;
+	padding: 10px;
+	font-family: sans-serif;
+	font-size: 18px;
+}
+
+input:focus {
+	box-shadow: 0 0 20px 0 rgba(127, 190, 213, 0.93);
 }
